# libcork

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  INSTALL  LICENSE.txt  Makefile.am  README.markdown  README.md  autogen.sh  configure.ac  make-dist.sh  run.sh  version.py  version.sh  waf  wscript
.buzzy/: links.yaml  package.yaml
.github/workflows/: ci.yml
.travis/: install  test
build-aux/: calculate
cmake/: FindCTargets.cmake  FindParseArguments.cmake  FindPrereqs.cmake
debian/: changelog  control  copyright  libcork-dev.install  libcork-doc.doc-base  libcork-doc.docs  libcork15.install  rules  watch
debian/patches/: 0001-remove-dependency-on-git-command.patch  0002-remove-failing-tests-on-armel.patch  0002-use-python3-cram-in-system.patch  0003-add-support-for-debian-version.patch  0005-Use-long-long-s-in-tests-to-support-building-on-32-b.patch  0005-add-library-multi-arch-support.patch  0006-add-library-multi-arch-support.patch  0007-add-build-support-for-kFreeBSD-and-GNU-Hurd.patch  0008-fix-a-bit-on-library-pkg-config-file.patch  0008-fix-of-PATH_MAX-for-GNU-Hurd.patch  0009-update-hash-test-result-for-big-endian-64bit.patch  series
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  allocation.rst  array.rst  attributes.rst  basic-types.rst  bitset.rst  buffer.rst  cli.rst  conf.py  config.rst  dllist.rst  ds.rst  errors.rst  files.rst  gc.rst  hash-table.rst  hash-values.rst  index.rst  managed-buffer.rst  mempool.rst  net-addresses.rst  process.rst  ring-buffer.rst  slice.rst  stream.rst  subprocess.rst  threads.rst  timestamps.rst
docs/_static/: docco-sphinx.css
docs/old/: CMakeLists.txt  allocation.rst  attributes.rst  bitset.rst  buffer.rst  byte-order.rst  conf.py
extras/: hashstring.py
include/: CMakeLists.txt  wscript
include/libcork/: cli.h  config.h  core.h  ds.h  os.h  threads.h
include/libcork/cli/: commands.h
include/libcork/config/: arch.h  bsd.h  config.h  cygwin.h  gcc.h  gnu.h  linux.h  macosx.h  solaris.h  version.h.in
include/libcork/core/: allocator.h  api.h  attributes.h  byte-order.h  callbacks.h  checkers.h  error.h  gc.h  hash.h  id.h  mempool.h  net-addresses.h  timestamp.h  types.h  u128.h
include/libcork/ds/: array.h  bitset.h  buffer.h  dllist.h  hash-table.h  managed-buffer.h  ring-buffer.h  slice.h  stream.h
include/libcork/helpers/: errors.h  gc.h  posix.h
include/libcork/os/: files.h  process.h  subprocess.h
include/libcork/threads/: atomics.h  basics.h
m4/: ax_valgrind_check.m4
scripts/: install  test
share/: CMakeLists.txt
share/valgrind/: libcork.supp
src/: APPNAME.pc.in  CMakeLists.txt  libcork.pc.in  wscript
src/cork-hash/: cork-hash.c
src/cork-initializer/: init1.c  init2.c  main.c
src/cork-test/: cork-test.c
src/libcork/cli/: commands.c
src/libcork/core/: allocator.c  dummy.c  error.c  gc.c  halloc.c  hash.c  id.c  ip-address.c  mempool.c  timestamp.c  u128.c  version.c
src/libcork/ds/: array.c  bitset.c  buffer.c  dllist.c  file-stream.c  hash-table.c  managed-buffer.c  ring-buffer.c  slice.c  stream.c
src/libcork/posix/: directory-walker.c  env.c  exec.c  files.c  process.c  subprocess.c
src/libcork/pthreads/: thread.c
src/libcork/threads/: descriptor.c
tests/: CMakeLists.txt  ccram  cork-initializer.t  create-u128-test-cases.py  helpers.h  run-test  test-array.c  test-bitset.c  test-buffer.c  test-core.c  test-dllist.c  test-ds.c  test-files.c  test-gc.c  test-hash-table.c  test-managed-buffer.c  test-mempool.c  test-ring-buffer.c  test-slice.c  test-subprocess.c  test-threads.c  test-u128.c  tile-test  train  wscript
tests/cork-test/: help1-root.t  help2-root.t  help3-root.t  no-command-root.t  run-paths-01.t  run-sub-01.t  run-sub-02.t  run-sub-03.t  run-sub-04.t  run-sub-05.t
tests/cork-test/help1-c1/: command
tests/cork-test/help1-c1-s1/: command
tests/cork-test/help1-c1-s2/: command
tests/cork-test/help1-c2/: command
tests/cork-test/help1-root/: command
tests/cork-test/help2-c1/: command
tests/cork-test/help2-c1-s1/: command
tests/cork-test/help2-c1-s2/: command  out
tests/cork-test/help2-c2/: command
tests/cork-test/help2-root/: command  out
tests/cork-test/help3-c1/: command  out
tests/cork-test/help3-c1-s1/: command  out
tests/cork-test/help3-c1-s2/: command
tests/cork-test/help3-c2/: command  out
tests/cork-test/help3-root/: command
tests/cork-test/no-command-c1/: command  out
tests/cork-test/no-command-root/: command  out
tests/cork-test/run-c1-s1/: command  out
tests/cork-test/run-c1-s1-f/: command  out
tests/cork-test/run-c1-s1-f-t/: command  out
tests/cork-test/run-c1-s1-t/: command
tests/cork-test/run-c1-s1-test/: command  out
tests/cork-test/run-c1-s2/: command  out
tests/cork-test/run-c1-s2-f/: command  out
tests/cork-test/run-c1-s2-file/: command  out
tests/cork-test/run-c2/: command  out
